# color-looks-mvp-v.1

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  generate_src.sh  soft_contrast_film.json
assets/ocio/: config.ocio
assets/presets/builtin/: neutral_film.json
assets/presets/packs/starter_pack/: pack.json
assets/thumbnails/: README.md
cmake/: CompileShaders.cmake  FindMetal.cmake  FindOpenColorIO.cmake
docs/: color-management.md  look-pipeline.md  performance.md  preset-authoring.md  technical-spec.md  testing.md
src/gpu/metal/shaders/: Common.metal  PipelineKernels.metal
src/presets/schema/: lookpreset.schema.json
tools/: CMakeLists.txt
tools/ocio_inspector/: main.cpp
tools/preset_packager/: main.py
tools/preset_validator/: CMakeLists.txt  main.cpp
